Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-project.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: files-storage
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project
          imagePullPolicy: Always
          image: IMAGE/PROJECT
          volumeMounts:
          - name: files-storage
            mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /dbready
              port: 3000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /dbready
              port: 3000
          resources:
            limits:
              cpu: "100m"
              memory: "50Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
