Part4/Exercise4.08/manifests-overlays/base/manifests/deployment-todos-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 30s
      - setWeight: 50
      - pause:
          duration: 30s
      - analysis:
          templates:
          - templateName: cpu-usage-rate
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: project
          imagePullPolicy: Always
          image: IMAGE/TODOS-BACKEND
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /backendz
              port: 3000
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            httpGet:
              path: /backendz
              port: 3000

---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
