Part4/Exercise4.08/manifests-overlays/base/manifests/statefulset-todos-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: todo-db-stset
spec:
  serviceName: todo-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: todo-db
          imagePullPolicy: Always
          image: IMAGE/TODOS-DB
          ports:
            - name: todo-db-port
              containerPort: 5432
          # volumeMounts:
          #   - name: todo-db-storage
          #     mountPath: /data
          volumeMounts:
            - name: somedata
              mountPath: /var/lib/postgresql/database
              subPath: postgres
      volumes:
        - name: somedata
          persistentVolumeClaim:
            claimName: somedata-pvc
  # volumeClaimTemplates:
  #   - metadata:
  #       name: todo-db-storage
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       storageClassName: local-path
  #       resources:
  #         requests:
  #           storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-db-svc
  labels:
    app: todo-db
spec:
  ports:
    - port: 5432
      name: todo-db-port
  clusterIP: None
  selector:
    app: todo-db
