Part4/Exercise4.08/manifests-overlays/base/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: project-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  # ingressClassName: nginx-public
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 1234
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 1234
